--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
 pandas==2.1.1
-numpy==1.24.3
+numpy==1.26.4
 python-dateutil==2.8.2
 Werkzeug==2.3.7
 bar-chart-race==0.1.0
 openpyxl==3.1.2
 gunicorn==21.2.0
+setuptools>=69.0.0
+wheel>=0.41.0
